--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "coastal-rag"
+name = "coastal_rag"
 version = "0.1.0"
 description = "RAG for coastal ecosystems data."
 authors = [
@@ -17,7 +17,14 @@ dependencies = [
     "jupyter (>=1.1.1,<2.0.0)",
     "langchain-ollama (>=0.3.0,<0.4.0)",
     "pypdf (>=5.4.0,<6.0.0)",
-    "nltk (>=3.9.1,<4.0.0)"
+    "nltk (>=3.9.1,<4.0.0)",
+    "unstructured[pdf] (>=0.17.2,<0.18.0)",
+    "langchain-unstructured (>=0.1.6,<0.2.0)",
+    "pymupdf (>=1.25.5,<2.0.0)",
+    "pillow (>=11.2.0,<12.0.0)",
+    "langchain-huggingface (>=0.1.2,<0.2.0)",
+    "torch (>=2.6.0,<3.0.0)",
+    "soundfile (>=0.13.1,<0.14.0)"
 ]
 
 
