--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "torch (>=2.7.0,<3.0.0)",
     "langgraph (>=0.4.1,<0.5.0)",
     "unstructured[pdf] (>=0.17.2,<0.18.0)",
+    "llama-cpp-python (>=0.3.9,<0.4.0)",
 ]
 
 
