--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,6 @@ dependencies = [
     "langchain (>=0.3.25,<0.4.0)",
     "langchain-community (>=0.3.23,<0.4.0)",
     "langchain-ollama (>=0.3.2,<0.4.0)",
-    "langchain-huggingface (>=0.1.2,<0.2.0)",
     "langchain-unstructured (>=0.1.6,<0.2.0)",
     "pypdf (>=5.4.0,<6.0.0)",
     "pymupdf (>=1.25.5,<2.0.0)",
@@ -24,7 +23,8 @@ dependencies = [
     "torch (>=2.7.0,<3.0.0)",
     "langgraph (>=0.4.1,<0.5.0)",
     "unstructured[pdf] (>=0.17.2,<0.18.0)",
-    "llama-cpp-python (>=0.3.9,<0.4.0)",
+    "langchain-huggingface (>=0.2.0,<0.3.0)",
+    "grobid-client-python (>=0.0.9,<0.0.10)",
 ]
 
 
