--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "langchain-huggingface (>=0.2.0,<0.3.0)",
     "grobid-client-python (>=0.0.9,<0.0.10)",
     "semanticscholar (>=0.10.0,<0.11.0)",
+    "tiktoken (>=0.9.0,<0.10.0)",
 ]
 
 
