--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "grobid-client-python (>=0.0.9,<0.0.10)",
     "semanticscholar (>=0.10.0,<0.11.0)",
     "tiktoken (>=0.9.0,<0.10.0)",
+    "faiss-cpu (>=1.11.0,<2.0.0)",
 ]
 
 
